--- a/_posts/2016-02-17-covid.md
+++ b/_posts/2016-02-17-covid.md
@@ -7,7 +7,7 @@ categories: development
 tags: JavaScript AngularJS API Sass
 featured_image: '/img/covid/policy.gif'
 project_link: 'https://nicholas-ko-zy.github.io/projects/covid_dtw.html'
-button_icon: 
+button_icon: ''
 button_text: 'Visit Project'
 lead_text: 'This is a clustering project where I compare the government responses to COVID between countries.'
 ---
