corrected typos on project pages

--- a/_posts/2016-02-17-covid.md
+++ b/_posts/2016-02-17-covid.md
@@ -1,7 +1,7 @@
 ---
 layout: inner
 position: left
-title: 'COVID Policy Comparison.'
+title: 'COVID Policy Comparison'
 date: 2022-02-20 15:56:00
 categories: development
 tags: JavaScript AngularJS API Sass
@@ -9,5 +9,5 @@ featured_image: '/img/covid/policy.gif'
 project_link: 'https://nicholas-ko-zy.github.io/projects/covid_dtw.html'
 button_icon: ''
 button_text: 'Visit Project'
-lead_text: 'This is a clustering project where I compare the government responses to COVID between countries.'
+lead_text: 'This is a clustering project where I compare the government responses to Covid between countries.'
 ---
